# Memify

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  azure-pipelines.yml  config.ini.example  entrypoint.sh
.github/workflows/: azure-deploy.yml
cache/: Cache.cpp  Cache.h  CacheDelete.cpp  CacheEvict.cpp  CacheSet.cpp  ICache.h
cache/geopoints/: Evict.cpp  GeoCache.cpp  GeoCache.h  GeoPath.cpp  GeoPoint.cpp  GeoPoint.h  GetGeoDistance.cpp  GetGeoPoint.cpp  IGeoCache.h  SetGeoPoint.cpp
cache/geopoints/utils/: GeoHash.c  GeoHash.h  GeoHashWrapper.cpp
cache/key-val/: Cache.cpp  Cache.h  CacheCleanup.cpp  CacheGet.cpp  CacheMoveToFront.cpp  ICache.h
cache/r-tree/: RTree.h
cache/time-series/: ITimeSeriesCache.h  TimePoint.h  TimeSeriesCache.cpp  TimeSeriesCache.h
config/: INIReader.cpp  INIReader.h
connection/: ConnectionHandler.cpp  ConnectionHandler.h  Connectionhandler.cpp  HandleClient.cpp  MessageProcessor.cpp  MessageProcessor.h  ProcessMessage.cpp  ResponseSender.cpp  ResponseSender.h  SendResponse.cpp  VerifySignature.cpp
connection/message/: MessageProcessor.cpp  MessageProcessor.h
connection/message/handlers/: HandleDelete.cpp  HandleErrors.cpp  HandleGet.cpp  HandlePing.cpp  HandleSet.cpp
connection/message/handlers/geolocation/: HandleGeoDistance.cpp  HandleGeoGet.cpp  HandleGeoPath.cpp  HandleGeoSet.cpp
connection/response/: ResponseSender.cpp  ResponseSender.h
core/: ThreadPool.cpp  ThreadPool.h
persistence/AOF/: AOF.cpp  AOF.h
persistence/snapshot/: ISnapshot.h  Snapshot.cpp  Snapshot.h
security/: HMACUtil.cpp  HMACUtil.h
server/: AuthenticateClient.cpp  Server.cpp  Server.h  VerifySgnature.cpp
src/: main.cpp
utils/logs/: ILogger.h
utils/logs/console/: ConsoleLogger.cpp  ConsoleLogger.h
utils/logs/file/: FileLogger.cpp  FileLogger.h
utils/logs/manager/: LoggerManager.cpp  LoggerManager.h
utils/parser/: CommandParser.cpp  CommandParser.h  Serializer.cpp
utils/parser/parsing/: Error.cpp  ParseBulkString.cpp  ParseFloat.cpp  ParseInteger.cpp  ParseSimpleString.cpp  ParsseArray.cpp
